grammar
<program> = <func_decl>
<func_decl> = "int" <Identifier> "(" ")" <compound-stmt>

<statement> = <compound-stmt>
            | <expression-stmt>
            | <selection-stmt>
            | <iteration-stmt>
            | "return" <expr> ";"
<compound-stmt> = "{" {<block-itemlist>} "}"
<expression-stmt> = {<expr>} ";"
<selection-stmt> = "if" "(" <expr> ")" <statement> {"else" <statement> }
<block-itemlist> = <block-item> {<block-itemlist>}
<block-item> = <var_decl>
             | <statement>

<var_decl> = "int" <Identifier> ["=" <expr>] ";"
<expr> = <assign> 
       | <conditional-expr>

<conditional-expr> = <logical-or> { "?" <expr> ":" <conditional-expr>}

<logical-or> =  <logical-AND-expr> {"||" <logcial-AND-expr>}  
<assign> = <Identifier> ('=' | '^=' | '&=' | '|=' |
                         '+=' | '*=' | '-=' | '/=' | 
                         '%=' | '<<=' | '>>=') <expr>
<logical-AND-expr> = <bitwise-OR> {"&&" <bitwise-OR>}
<bitwise-OR> = <bitwise-XOR> {"|" <bitwise-XOR>}
<bitwise-XOR> = <bitwise-AND> {"^" <bitwise-AND>}
<bitwise-AND> = <rel-eq> { "&" <rel-eq> }
<eq> = <rel> { ("==" | "!=") <rel> }
<rel> = <bit-shift> {(">" | "<" | "<=" | ">=") <bit-shift>}
<bit-shift> = <additive> {("<<" | ">>") <additive>}
<additive> = <term> {("+" | "-") <term>}
<term> = <unary-expr> {("*" | "/" | "%")<unary-expr>}
<unary-expr> = <postfix-expr>
             | <UnaryOP> <unary-expr>
<postfix-expr> = <primary> <postfix-op>
<postfix-op> = ("++" | "--") <postfix-op>
<primary> = "(" <expr> ")"
         | IntLiteral
         | <Identifier>  # This is for variable
<UnaryOP> = "~"
          | "!"
          | "-"
          | "++"
          | "--"
